# steering-bench

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yaml
assets/: .gitignore
examples/: walkthrough.ipynb
experiments/layer_sweep/: README.md  run_layer_sweep.py
scripts/: run_layer_sweep.py  run_steering_experiment.py
steering_bench/: config.py  evaluate.py  format.py  hook.py  metric.py
steering_bench/core/: evaluate.py  format.py  pipeline.py  templater.py  types.py
steering_bench/data/: __init__.py  load.py  run_convert.py  run_download_and_convert.py  utils.py
steering_bench/data/convert/: persona.py  xrisk.py
steering_bench/data/translation/: constants.py
steering_bench/dataset/: __init__.py  download.py  preprocess.py  registry.py
steering_bench/dataset/mwe/: README.md  __init__.py  mwe_persona.py  mwe_xrisk.py  preprocess.py
steering_bench/dataset/mwe_v2/: __init__.py  download.py  mwe_v2.py  scratch.py
steering_bench/steering/: __init__.py  build_train_data.py  evaluate_steering_vector.py  steering_hook.py  train_steering_vector.py
steering_bench/utils/: build_training_data.py  constants.py  device_manager.py  eval_utils.py  github.py  io.py  patterns.py  torch.py
steering_bench/viz/: data_browser.py  utils.py
tests/: test_init.py
tests/integration/: test_evaluate_steering_vector.py  test_run_convert.py
tests/unit/data/: test_utils.py
